reverted to functional version

--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -9,64 +9,54 @@
     </head>
 
     <body>
-      <h1> My Workout </h1>
+        <h1>My Workout Tracker</h1>
+        <p> Speed </p>
 
-<div id="whole", class="span">
+        <!-- <div id="myCircle"></div>
+        <div id="myCircle2"></div>
+        <div id="myCircle3"></div> -->
 
-      <div id="j">
-           <div class="span1">
-            03:05
-            <br />
-              <div class="span5">
-              min:sec
+        <div id="whole">
+
+          <div id="j">
+               <span id="span1">3:05</span>
+          </div>
+
+          <div id="center">
+            <span id="span3">2.8</span>
+              <div id="logo">
+                <span class="speedometer"></span>
+                <span class="needle"></span>
               </div>
-           </div>
-      </div>
-
-      <div id="center">
-        <div class="span3">
-          2.8
-          <br />
-          <div class="span6">
-          km/h
           </div>
-       </div>
 
-
-          <div id="logo">
-            <span class="speedometer"></span>
-            <span class="needle"></span>
+          <div id="h">
+              <span id="span2"></span>
           </div>
-      </div>
 
-      <div id="h">
-          <div class="span2">
-            </div>
-      </div>
+        </div>
 
-    </div>
-
-    <script type="text/javascript" charset="utf-8">
-        var socket = io();
-        var totalDis = 0;
-        var disDisplay = 0;
-        socket.on('connect', function() {
-          // socket.emit('json', {data: 'I\'m connected!'});
-        });
-
-        socket.on('distance', function(dist_obj) {
-            const json = JSON.parse(dist_obj);
-            console.log(json);
-            //console.log(json.distance);
-
-            if (json.distance !== undefined) {
-                totalDis = parseFloat(json.distance);
-                disDisplay = totalDis.toString();
-                console.log(totalDis);
-                console.log(disDisplay);
-                setDistance();
-                }
+        <script type="text/javascript" charset="utf-8">
+            var socket = io();
+            var totalDis = 0;
+            var disDisplay = 0;
+            socket.on('connect', function() {
+              // socket.emit('json', {data: 'I\'m connected!'});
             });
+
+            socket.on('distance', function(dist_obj) {
+                const json = JSON.parse(dist_obj);
+                console.log(json);
+                //console.log(json.distance);
+
+                if (json.distance !== undefined) {
+                    totalDis = parseFloat(json.distance);
+                    disDisplay = totalDis.toString();
+                    console.log(totalDis);
+                    console.log(disDisplay);
+                    setDistance();
+                    }
+                });
             function setDistance(){
               var elem = document.getElementById("span2");
               elem.innerHTML = disDisplay;
