removed span4, added metres to js

--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -41,10 +41,7 @@
 
       <div id="h">
           <div id="span2">
-          </br>
-            <div id="span4">
-                       meters
-                    </div></div>
+          </div>
       </div>
 
 </div>
@@ -71,7 +68,7 @@
                 });
             function setDistance(){
               var elem = document.getElementById("span2");
-              elem.innerHTML = disDisplay;
+              elem.innerHTML = (disDisplay + "metres");
             }
           </script>
     </body>
