--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -40,7 +40,7 @@
       </div>
 
       <div id="h">
-          <div id="span2">
+          <div class="span2">
           </div>
       </div>
 
@@ -67,8 +67,8 @@
                     }
                 });
             function setDistance(){
-              var elem = document.getElementById("span2");
-              elem.innerHTML = (disDisplay + "metres");
+              var elem = document.getElementsByClassName("span2");
+              elem.innerHTML = (disDisplay + " metres");
             }
           </script>
     </body>
