commented out position for span2 (debug)

--- a/DistanceWeb/static/css/style2.css
+++ b/DistanceWeb/static/css/style2.css
@@ -111,7 +111,7 @@ h1 {
   color: green;
   font-family:Arial, Helvetica, sans-serif;
   font-size: 20px;
-  position: absolute;
+  /* position: absolute; */
   top: 20px;
   left: 20px;
   display: inline-block;
