--- a/Web3/templates/test.html
+++ b/Web3/templates/test.html
@@ -43,7 +43,8 @@
               <br />
               <div class="span4">
                          meters
-                      </div></div>
+                      </div>
+                    </div>
         </div>
 
 </div>
