--- a/Web3/templates/test3.html
+++ b/Web3/templates/test3.html
@@ -9,40 +9,46 @@
   <body>
         <h1> My Workout </h1>
 
-<div id="whole">
-  <div id="Container", class = "span", style="width:80%; height:200px; background-color:white; margin:auto;">
+  <div id="container", class = "span">
 
-    <div id="time", style="background-color:red; margin:20px;">
+    <div id="time">
       <div id="timeCircle">
-      </div>
-      <div id="timeText">
-        12:05
-      </div>
+          <div id="timeText">
+            03:05
+          </div>
+          <div id="timeTextMeasure">
+          </br></br>
+           min:sec
+          </div>
+        </div>
     </div>
 
-    <div id="speed", style="background-color:blue; margin:20px;">
+    <div id="speed">
       <div id="speedCircle">
-      </div>
-      <div id="speedNeedle">
-      </div>
-      <div id="speedText">
-        25
-        km/h
-      </div>
+        <div id="needle">
+        </div>
+          <div id="speedText">
+            25
+          </div>
+          <div id="speedTextMeasure">
+          </br></br>
+           km/h
+          </div>
+        </div>
     </div>
 
-    <div id="distance", style="background-color:pink; margin:20px;">
+    <div id="distance">
       <div id="distanceCircle">
-      </div>
-      <div id="distanceText">
-        100
-        meters
-      </div>
+          <div id="distanceText">
+            100
+          </div>
+          <div id="distanceTextMeasure">
+          </br></br>
+           meters
+          </div>
+        </div>
     </div>
 
-  </div>
-</div>
-    <!-- <div id="h"> <div class="header"></div>
-        </div> -->
+    </div>
   </body>
 </html>
