--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -30,8 +30,8 @@
 
 
           <div id="logo">
-            <span class="speedometer"></span>
-            <span class="needle"></span>
+            <span id="speedometer"></span>
+            <span id="needle"></span>
           </div>
       </div>
 
@@ -68,6 +68,7 @@
               var elem = document.getElementById("span2");
               elem.innerHTML = (disDisplay + " metres");
             }
+
             socket.on('speed', function(speed_obj) {
                 const json = JSON.parse(speed_obj);
                 console.log(json);
@@ -82,8 +83,7 @@
                     }
                 });
             function setSpeed(){
-              var elem2 = document.getElementById("span3");
-              elem2.innerHTML = (speedDisplay + " m/s");
+              var elem2 = document.getElementById("needle");
             }
           </script>
     </body>
