commented out setSpeed() (debug)

--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -79,7 +79,7 @@
                     speedDisplay = currentSpeed.toString();
                     console.log(currentSpeed);
                     console.log(speedDisplay);
-                    setSpeed();
+                    // setSpeed();
                     }
                 });
             function setSpeed(){
