--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -2,7 +2,7 @@
     <head>
       <title>My Workout Tracker</title>
       <link rel="stylesheet" type="text/css"
-            href="{{ url_for('static', filename='css/style2.css') }}">
+            href="{{ url_for('static', filename='css/style3.css') }}">
       <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
                   integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I="
                   crossorigin="anonymous"></script>
@@ -11,42 +11,53 @@
     <body>
       <h1> My Workout </h1>
 
-<div id="whole", class="span">
+<div id="container", class = "span">
 
-      <div id="j">
-           <div class="span1">
-            03:05
-            <br />
-              <div class="span5">
-              min:sec
-              </div>
-           </div>
+  <div id="time">
+    <div id="timeCircle">
+        <div id="timeText">
+          03:05
+        </div>
+        <div id="timeTextMeasure">
+        </br></br>
+         min:sec
+        </div>
       </div>
+  </div>
 
-      <div id="center">
-        <div class="span3">
-          </div>
-       </div>
-
-
-          <div id="logo">
-            <span id="speedometer"></span>
-            <span id="needle"></span>
-          </div>
+  <div id="speed">
+    <div id="speedCircle">
+      <div id="needle">
       </div>
-
-      <div id="h">
-          <div id="span2">
-          </div>
+        <div id="speedText">
+          25
+        </div>
+        <div id="speedTextMeasure">
+        </br></br>
+         km/h
+        </div>
       </div>
+  </div>
 
-</div>
+  <div id="distance">
+    <div id="distanceCircle">
+        <div id="distanceText">
+        </div>
+        <div id="distanceTextMeasure">
+        </br></br>
+         meters
+        </div>
+      </div>
+  </div>
+
+  </div>
         <script type="text/javascript" charset="utf-8">
             var socket = io();
             var totalDis = 0;
             var currentSpeed = 0;
             var speedDisplay = 0;
             var disDisplay = 0;
+
             socket.on('connect', function() {
               // socket.emit('json', {data: 'I\'m connected!'});
             });
@@ -65,8 +76,8 @@
                     }
                 });
             function setDistance(){
-              var elem = document.getElementById("span2");
-              elem.innerHTML = (disDisplay + " metres");
+              var elem = document.getElementById("distanceText");
+              elem.innerHTML = (disDisplay);
             }
 
             socket.on('speed', function(speed_obj) {
@@ -82,9 +93,6 @@
                     // setSpeed();
                     }
                 });
-            function setSpeed(){
-              var elem2 = document.getElementById("needle");
-            }
           </script>
     </body>
 </html>
