--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -30,11 +30,10 @@
       <div id="needle">
       </div>
         <div id="speedText">
-          25
         </div>
         <div id="speedTextMeasure">
         </br></br>
-         km/h
+         m/s
         </div>
       </div>
   </div>
@@ -76,8 +75,8 @@
                     }
                 });
             function setDistance(){
-              var elem = document.getElementById("distanceText");
-              elem.innerHTML = (disDisplay);
+              var disttext = document.getElementById("distanceText");
+              disttext.innerHTML = (disDisplay);
             }
 
             socket.on('speed', function(speed_obj) {
@@ -90,9 +89,13 @@
                     speedDisplay = currentSpeed.toString();
                     console.log(currentSpeed);
                     console.log(speedDisplay);
-                    // setSpeed();
+                    setSpeed();
                     }
                 });
+              function setSpeed(){
+                var speedtext = document.getElementById("speedText");
+                speedtext.innerHTML = (speedDisplay);
+              }
           </script>
     </body>
 </html>
