--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -16,7 +16,6 @@
   <div id="time">
     <div id="timeCircle">
         <div id="timeText">
-          03:05
         </div>
         <div id="timeTextMeasure">
         </br></br>
@@ -97,5 +96,35 @@
                 speedtext.innerHTML = (speedDisplay);
               }
           </script>
+          <script type="text/text/javascript" charset="utf-8">
+            var startTime = Date.now();
+            var second = 1000;
+            var minute = second * 60;
+            var hour = minute * 60;
+            var container = document.getElementById('timeText');
+
+            function stopTimer() {
+                clearInterval(timer);
+            }
+
+            function pad(n){
+              return ('00' + n).slice(-2);
+            }
+
+            var timer = setInterval(function(){
+              var currentTime = Date.now();
+              var difference = currentTime - startTime;
+
+              var hours = pad((difference / hour) | 0);
+              var minutes = pad(((difference % hour) / minute) | 0);
+              var seconds = pad(((difference % minute) / second) | 0);
+
+              container.innerHTML = hours + ':' + minutes + ':' + seconds;
+
+            // This only represents time between renders. Actual time rendered is based
+            // on the elapsed time calculated above.
+            }, 250);
+            </script>
+          <button type="button" onclick="stopTimer()">Stop</button>
     </body>
 </html>
