removed button (debug)

--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -19,7 +19,7 @@
         </div>
         <div id="timeTextMeasure">
         </br></br>
-         min:sec
+         hr:min:sec
         </div>
       </div>
   </div>
@@ -125,6 +125,6 @@
             // on the elapsed time calculated above.
             }, 250);
             </script>
-          <button type="button" onclick="stopTimer()">Stop</button>
+          <!-- <button type="button" onclick="stopTimer()">Stop</button> -->
     </body>
 </html>
