--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -124,6 +124,7 @@
             // This only represents time between renders. Actual time rendered is based
             // on the elapsed time calculated above.
             }, 250);
+            console.log(hours + ':' + minutes + ':' + seconds);
             </script>
           <!-- <button type="button" onclick="stopTimer()">Stop</button> -->
     </body>
