--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -96,7 +96,7 @@
                 speedtext.innerHTML = (speedDisplay);
               }
           </script>
-          <script type="text/text/javascript" charset="utf-8">
+          <script type="text/javascript" charset="utf-8">
             var startTime = Date.now();
             var second = 1000;
             var minute = second * 60;
