--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -123,7 +123,7 @@
             // This only represents time between renders. Actual time rendered is based
             // on the elapsed time calculated above.
             }, 250);
-            console.log(hours + ':' + minutes + ':' + seconds);
+            // console.log(hours + ':' + minutes + ':' + seconds);
           }
             window.onload = showTime();
             </script>
