--- a/Web3/templates/test3.html
+++ b/Web3/templates/test3.html
@@ -4,10 +4,33 @@
         <title>Our App</title>
         <link rel="stylesheet" type="text/css"
         href="{{ url_for('static', filename='css/style3.css') }}">
+
+        <script type="text/javascript" charset="utf-8"></script>
+        <script src="{{ url_for('static', filename='js/speedometer.js') }}" language="JavaScript"></script>
+
   </head>
 
   <body>
+
         <h1> My Workout </h1>
+
+        <div id="options" >
+
+          <div id="pauseCircle", onclick="pauseFunction()">
+            <div id="pauseStripe">
+            </div>
+            <div id="pauseStripe">
+            </div>
+          </div>
+
+
+          <div id="stopCircle"> <a href="http://localhost:5000/test4">
+            <div id="stopTriangle">
+            </div>
+            </a>
+          </div>
+        </div>
+
 
   <div id="container", class = "span">
 
@@ -48,7 +71,10 @@
           </div>
         </div>
     </div>
-
     </div>
+
+                <div id="overlay">
+                </div>
+
   </body>
 </html>
