--- a/Web3/templates/summary.html
+++ b/Web3/templates/summary.html
@@ -3,25 +3,24 @@
   <head>
         <title> Our App - home </title>
         <link rel="stylesheet" type="text/css"
-        href="{{ url_for('static', filename='css/style4.css') }}">
+        href="{{ url_for('static', filename='css/summary.css') }}">
 
         <script type="text/javascript" charset="utf-8"></script>
-        <script src="{{ url_for('static', filename='js/speedometer.js') }}" language="JavaScript"></script>
+        <script src="{{ url_for('static', filename='js/summary.js') }}" language="JavaScript"></script>
 
   </head>
 
   <body>
 
-    <h1> Start your Workout </h1>
+    <h1> My Workout Summary </h1>
 
     <!-- <button onclick="startWorkout()">start</button> -->
     <div id="container" >
-        <a href="http://localhost:5000/test3">
-          <div id="startButton">
-            <div id="triangle">
+        <a href="http://localhost:5000/start">
+          <div id="reStartButton">
+            <div id="reStartTriangle">
             </div>
           </div>
-          <h2> Start</h2>
         </a>
     </div>
 
