--- a/Web3/templates/start.html
+++ b/Web3/templates/start.html
@@ -20,12 +20,9 @@
   </div>
 
         <div id="del-countdown">
-          <div id="clock"></div>
-          <div id="units">
-          <span>Seconds</span>
-        <!-- </div>
-        </div> -->
-
+          <div id="clock"> 3 </div>
+          <div id="units"> Seconds </div>
+        </div>
 
     <!-- <div id="container">
           <div id="startButton" onmouseover="hoverFunction()" onmouseout="hoverOutFunction()" onclick ="hideStartButton" onclick="startTimer()" >
