--- a/DistanceWeb/templates/workoutVis.html
+++ b/DistanceWeb/templates/workoutVis.html
@@ -127,12 +127,12 @@
                     longDisplay = currentLong.toString();
                     console.log(currentLong);
                     console.log(longDisplay);
-                    // setLat();
+                    // setLong();
                     }
                   });
-                // function setLat(){
-                //   var lattext = document.getElementById("latText");
-                //   speedtext.innerHTML = (latDisplay);
+                // function setLong(){
+                //   var longtext = document.getElementById("longText");
+                //   longtext.innerHTML = (longDisplay);
 
           </script>
           <script type="text/javascript" charset="utf-8">
